Fix spacing in i5

--- a/css/index.css
+++ b/css/index.css
@@ -78,13 +78,13 @@ a:hover {
 }
 
 #header .cover {
-  /*background-color: rgba(255, 0, 0, 0.5);*/
 	display: flex;
   flex-grow: 1;
   flex-basis: 0;
 	flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  padding-bottom: 40px;
 }
 
 .slogan {
@@ -129,7 +129,14 @@ a:hover {
 }
 .screenshot:last-child {
   margin-right: 0;
-  margin-bottom: 10px;
+  margin-bottom: 0;
+}
+@media (max-width: 340px) {
+  .screenshot {
+    width: 280px;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
 
 #future-caps,
